flickering bug fixed

--- a/src/UI/Nav.module.css
+++ b/src/UI/Nav.module.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   position: fixed;
   right: 20%;
+  top: 50px;
   z-index: 5;
   transition: all 0.2s linear;
 }
@@ -19,8 +20,8 @@
   cursor: pointer;
   background-color: rgb(196, 200, 204);
   border: transparent;
-  transition: all 0.5s linear;
-  z-index: 2;
+  transition: all 0.2s linear;
+  z-index: 5;
 }
 
 .button .hamburger {
@@ -91,6 +92,7 @@ span > * {
   color: white;
   font-size: 1.4rem;
   font-weight: 500;
+  text-decoration: none;
 }
 
 .sidemenu > div:hover {
