--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,13 +1,12 @@
 .hero {
   position: relative;
   width: clamp(200px, 60vw, 800px);
-  height: 300px;
+  height: 350px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: 5rem;
   gap: 1rem;
 }
 .address {
